--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Create.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Create.cshtml
@@ -8,79 +8,78 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "ProductAdmin", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Product</h4>
+        <h2>Create new Product</h2>
         <hr />
         @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductCode, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProductCode, "Mã Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductCode)
+                @Html.EditorFor(model => model.ProductCode, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductCode)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductName, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProductName, "Tên Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductName)
+                @Html.EditorFor(model => model.ProductName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductName)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductTypeID, "ProductTypeID", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProductTypeID, "Loại Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ProductTypeID", new SelectList(ViewBag.ProductType, "ID", "ProductTypeName"));
+                @Html.DropDownList("ProductTypeID",(IEnumerable<SelectListItem>)ViewData["ProductTypeID"], new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductTypeID)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SalePrice, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SalePrice, "Giá Bán",new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SalePrice)
+                @Html.EditorFor(model => model.SalePrice, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SalePrice)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.OriginPrice, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.OriginPrice, "Giá Gốc", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OriginPrice)
+                @Html.EditorFor(model => model.OriginPrice, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.OriginPrice)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.InstallmentPrice, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.InstallmentPrice, "Giá Góp", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InstallmentPrice)
+                @Html.EditorFor(model => model.InstallmentPrice, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.InstallmentPrice)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Quantity, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Quantity, "Số Lượng Tồn", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Quantity)
+                @Html.EditorFor(model => model.Quantity, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Quantity)
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Avatar, new { @class = "control-label col-md-2" })
+		<div class="form-group">
+            @Html.Label("HinhAnh", "Hình sản phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Avatar)
-                @Html.ValidationMessageFor(model => model.Avatar)
+                @Html.TextBox("HinhAnh", null, new { @type = "file", onchange = "readURL(this)", @class = "form-control" })
+                @Html.ValidationMessage("HinhAnh")
+                <img id="HinhDAIDIEN" src="" />
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Status, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -88,7 +87,6 @@
                 @Html.ValidationMessageFor(model => model.Status)
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -103,4 +101,18 @@
 
 @*@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script>
+    function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#HinhDAIDIEN')
+                        .attr('src', e.target.result)
+                        .width()
+                        .height();
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+    }
+</script>
 }*@
