Should Edit more

--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -88,6 +88,7 @@
         <script src="~/Scripts/dataTables.bootstrap4.js"></script>
         <script src="~/Scripts/sb-admin.min.js"></script>
         <script src="~/Scripts/sb-admin-datatables.min.js"></script>
+        @RenderSection("scripts", required: false)
     </div>
 </body>
 </html>
