--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Create.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Create.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductTypeID, "Loại Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ProductTypeID",(IEnumerable<SelectListItem>)ViewData["ProductTypeID"], new { @class = "form-control" })
+                @Html.DropDownList("ProductTypeID", new SelectList(ViewBag.ProductType, "ID", "ProductTypeName"))
                 @Html.ValidationMessageFor(model => model.ProductTypeID)
             </div>
         </div>
@@ -73,11 +73,11 @@
             </div>
         </div>
 		<div class="form-group">
-            @Html.Label("HinhAnh", "Hình sản phẩm", new { @class = "control-label col-md-2" })
+            @Html.Label("Imagefile", "Hình sản phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBox("HinhAnh", null, new { @type = "file", onchange = "readURL(this)", @class = "form-control" })
-                @Html.ValidationMessage("HinhAnh")
-                <img id="HinhDAIDIEN" src="" />
+                @Html.TextBox("Imagefile", null, new { @type = "file", onchange = "readURL(this)", @class = "form-control" })
+                @Html.ValidationMessage("Imagefile")
+                <img id="Anh" src="" />
             </div>
         </div>
         <div class="form-group">
@@ -98,15 +98,14 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@*@section Scripts {
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 <script>
     function readURL(input) {
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
                 reader.onload = function (e) {
-                    $('#HinhDAIDIEN')
+                    $('#Anh')
                         .attr('src', e.target.result)
                         .width()
                         .height();
@@ -115,4 +114,4 @@
             }
     }
 </script>
-}*@
+}
