--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Index.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Index.cshtml
@@ -5,15 +5,13 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<link rel="stylesheet" type="text/css" href="~/Content/dataTables.min.css" />
 
+<h2>Danh sách sản phẩm</h2>
+<hr />
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Thêm Sản Phẩm", "Create", null, new { @class = "btn btn-primary pull-right", @style = "margin-bottom: 10px" })
 </p>
-<div class="card mb-3">
-    <div class="card-header">
-        <i class="fa fa-table"></i> Data Table Example
-    </div>
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100" cellspacing="0">
@@ -31,20 +29,6 @@
                         <th>Action</th>
                     </tr>
                 </thead>
-                <tfoot>
-                    <tr>
-                        <th>Product Code</th>
-                        <th>Product Name</th>
-                        <th>Sale Price</th>
-                        <th>Origin Price</th>
-                        <th>Installment Price</th>
-                        <th>Quantity</th>
-                        <th>Avatar</th>
-                        <th>Status</th>
-                        <th>Product Type Code</th>
-                        <th>Action</th>
-                    </tr>
-                </tfoot>
                 <tbody>
                     @foreach (var item in Model)
                     {
@@ -71,9 +55,6 @@
                                 <img src="/Image/@item.Avatar" width="100" height="100" />
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Avatar)
-                            </td>
-                            <td>
                                 @Html.DisplayFor(modelItem => item.Status)
                             </td>
                             <td>
@@ -86,11 +67,9 @@
                             </td>
                         </tr>
                     }
-
                 </tbody>
             </table>
         </div>
     </div>
-    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
 </div>
  
