--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Edit.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Edit.cshtml
@@ -8,7 +8,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "ProductAdmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -19,23 +19,23 @@
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductCode, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProductCode, "Mã Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductCode)
+                @Html.EditorFor(model => model.ProductCode, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductCode)
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ProductName, new { @class = "control-label col-md-2" })
+         <div class="form-group">
+            @Html.LabelFor(model => model.ProductName, "Tên Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductName)
+                @Html.EditorFor(model => model.ProductName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductName)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductTypeID, "ProductTypeID", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProductTypeID, "Loại Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ProductTypeID", new SelectList(ViewBag.ProductType,"ID","ProductTypeName",Model.ProductType))
                 @Html.ValidationMessageFor(model => model.ProductTypeID)
@@ -43,42 +43,43 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SalePrice, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SalePrice, "Giá Bán",new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SalePrice)
+                @Html.EditorFor(model => model.SalePrice, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SalePrice)
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.OriginPrice, new { @class = "control-label col-md-2" })
+       <div class="form-group">
+            @Html.LabelFor(model => model.OriginPrice, "Giá Gốc", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OriginPrice)
+                @Html.EditorFor(model => model.OriginPrice, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.OriginPrice)
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.InstallmentPrice, new { @class = "control-label col-md-2" })
+         <div class="form-group">
+            @Html.LabelFor(model => model.InstallmentPrice, "Giá Góp", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InstallmentPrice)
+                @Html.EditorFor(model => model.InstallmentPrice, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.InstallmentPrice)
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Quantity, new { @class = "control-label col-md-2" })
+         <div class="form-group">
+            @Html.LabelFor(model => model.Quantity, "Số Lượng Tồn", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Quantity)
+                @Html.EditorFor(model => model.Quantity, new { @type = "number", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Quantity)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Avatar, new { @class = "control-label col-md-2" })
+            @Html.Label("Imagefile", "Hình sản phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Avatar)
-                @Html.ValidationMessageFor(model => model.Avatar)
+                @Html.TextBox("Imagefile", null, new { @type = "file", onchange = "readURL(this)", @class = "form-control" })
+                @Html.ValidationMessage("Imagefile")
+                <img id="Anh" src="@Url.Action("LoadImage", new { id = Model.ID })" width="100" height="100" />
             </div>
         </div>
 
@@ -102,6 +103,20 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@*@section Scripts {
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}*@
+<script>
+    function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#Anh')
+                        .attr('src', e.target.result)
+                        .width()
+                        .height();
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+    }
+</script>
+}
