--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Index.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Index.cshtml
@@ -5,31 +5,29 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<link rel="stylesheet" type="text/css" href="~/Content/dataTables.min.css" />
+<link rel="stylesheet" type="text/css" href="~/AreasContent/dataTables.min.css" />
 
 <h2>Danh sách sản phẩm</h2>
 <hr />
 <p>
     @Html.ActionLink("Thêm Sản Phẩm", "Create", null, new { @class = "btn btn-primary pull-right", @style = "margin-bottom: 10px" })
 </p>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>Product Code</th>
-                        <th>Product Name</th>
-                        <th>Sale Price</th>
-                        <th>Origin Price</th>
-                        <th>Installment Price</th>
-                        <th>Quantity</th>
-                        <th>Avatar</th>
-                        <th>Status</th>
-                        <th>Product Type Code</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
+     <table class="table table-bordered table-striped table-hover" id="dataTable" width="100%">
+            <thead>
+                <tr>
+                     <th>Product Code</th>
+                     <th>Product Name</th>
+                     <th>Sale Price</th>
+                     <th>Origin Price</th>
+                     <th>Installment Price</th>
+                     <th>Quantity</th>
+                     <th>Avatar</th>
+                     <th>Status</th>
+                     <th>Product Type Code</th>
+                     <th>Action</th>
+                   </tr>
+              </thead>
+              <tbody>
                     @foreach (var item in Model)
                     {
                         <tr>
@@ -52,7 +50,7 @@
                                 @Html.DisplayFor(modelItem => item.Quantity)
                             </td>
                             <td>
-                                <img src="/Image/@item.Avatar" width="100" height="100" />
+                                <img src="@Url.Action("LoadImage", new { id = item.ID })" width="100" height="100" />
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Status)
@@ -62,14 +60,18 @@
                             </td>
                             <td>
                                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }, new {@class = "btn btn-warning" }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.ID }, new {@class = "btn btn-info" }) |
                                 @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new {@class = "btn btn-danger" })
                             </td>
                         </tr>
                     }
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+               </tbody>
+    </table>
+@section Scripts{
+    <script type="text/javascript" charset="utf-8" src="~/AreasContent/dataTables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+    </script>
+}
  
