--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -41,15 +41,14 @@
                     </a>
                 </li>
             </ul>
-			if
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link mr-lg-2" href="Login">
+                    <a class="nav-link mr-lg-2" href="/Admin/ProductAdmin/Login">
                         Login
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" >
+                    <a class="nav-link" href="/Admin/ProductAdmin/Logout">
                        Logout
                     </a>
                 </li>
