--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Create.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Create.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductCode, "Mã Sản Phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductCode, new { @class = "form-control" })
+                @Html.TextBoxFor(model => model.ProductCode, new { disabled = "disabled", @readonly = "readonly" })
                 @Html.ValidationMessageFor(model => model.ProductCode)
             </div>
         </div>
@@ -91,7 +91,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </div>
     </div>
