--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -42,15 +42,15 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+               
                 <li class="nav-item">
-                    <a class="nav-link mr-lg-2" href="/Admin/ProductAdmin/Login">
-                        Login
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Admin/ProductAdmin/Logout">
-                       Logout
-                    </a>
+                    @if (Session["UserName"] != null)
+                    {
+                        <p style="color:white;"><i class="fa fa-user-circle-o"></i>
+                        Welcome @Session["UserName"].ToString() | 
+                        <a class="nav-link" href="/Admin/ProductAdmin/Logout">Logout</a>
+                        </p>
+                    }
                 </li>
             </ul>
         </div>
