--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Login.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Login.cshtml
@@ -39,12 +39,13 @@
     <body>
         <div class="limiter">
             <div class="container-login100">
-                <div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
+                <div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55" >
                     <form class="login100-form validate-form flex-sb flex-w">
-                        <span class="login100-form-title p-b-32">
-                            Quyết Tiến
-                        </span>
+                        <span class="login100-form-title p-b-32 w3-container w3-center w3-padding-32">
 
+                            <img id="drag1" src="/image/Logo_QT.jpg" >
+                        </span>
+                        <br />
                         <span class="txt1 p-b-11">
                             Username
                         </span>
