--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Create.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Create.cshtml
@@ -1,100 +1,95 @@
 ﻿@model DIENMAYQUYETTIEN.Models.CashBill
 
 @{
-    Layout = null;
+    ViewBag.Title = "Create";
+	Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>THÊM HÓA ĐƠN TIỀN MẶT</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-    @using (Html.BeginForm()) 
-    {
-        @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
-            <h4>CashBill</h4>
-            <hr />
-            @Html.ValidationSummary(true)
+
+@using (Html.BeginForm()) 
+{
+    @Html.AntiForgeryToken()
     
-            <div class="form-group">
-                @Html.LabelFor(model => model.BillCode, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.BillCode)
-                    @Html.ValidationMessageFor(model => model.BillCode)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.CustomerName, new { @class = "control-label col-md-2" })
+    <div class="form-horizontal">
+        <h4>Thông tin hóa đơn</h4>
+        <hr />
+        @Html.ValidationSummary(true)
+
+        <div class="row">
+            <div class="form-group col-md-6">
+                @Html.LabelFor(model => model.CustomerName, "Tên khách hàng", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.CustomerName)
                     @Html.ValidationMessageFor(model => model.CustomerName)
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.PhoneNumber, new { @class = "control-label col-md-2" })
+
+            <div class="form-group col-md-6">
+                @Html.LabelFor(model => model.PhoneNumber, "Số điện thoại", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.PhoneNumber)
-                    @Html.ValidationMessageFor(model => model.PhoneNumber)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Address, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Address)
-                    @Html.ValidationMessageFor(model => model.Address)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Date, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Date)
-                    @Html.ValidationMessageFor(model => model.Date)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Shipper, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Shipper)
-                    @Html.ValidationMessageFor(model => model.Shipper)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Note, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Note)
-                    @Html.ValidationMessageFor(model => model.Note)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.GrandTotal, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.GrandTotal)
-                    @Html.ValidationMessageFor(model => model.GrandTotal)
-                </div>
-            </div>
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    @Html.EditorFor(model => model.CustomerName)
+                    @Html.ValidationMessageFor(model => model.CustomerName)
                 </div>
             </div>
         </div>
-    }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
+
+        <div class="row">
+            <div class="form-group col-md-6">
+                @Html.LabelFor(model => model.Address, "Địa chỉ", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Address)
+                    @Html.ValidationMessageFor(model => model.Address)
+                </div>
+            </div>
+
+            <div class="form-group col-md-6">
+                @Html.LabelFor(model => model.Note, "Ghi chú", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Note)
+                    @Html.ValidationMessageFor(model => model.Note)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Lưu hóa đơn" class="btn btn-default" />
+            </div>
+        </div>
     </div>
-</body>
-</html>
+}
+
+@if (Session["CashBill"] != null) { 
+
+    @Html.Action("Create", "CashBillDetail")
+    @Html.Action("Index", "CashBillDetail")
+
+    <br /><br />
+    using (Html.BeginForm("Create2", "CashBill"))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Lập hóa đơn" class="btn btn-primary" />
+            </div>
+        </div>
+    }
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+@section Scripts {
+<script>
+    $('#ProductID').change(function () {
+        var url = '@Url.Action("SalePrice", "CashBillDetail")';
+        url = url + '?ProductID=' + $(this).val();
+        $.get(url, function (data) {
+            $('#SalePrice').val(data);
+        });
+    });
+</script>
+}
