--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Login.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/ProductAdmin/Login.cshtml
@@ -42,7 +42,8 @@
                 <div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
                     <form class="login100-form validate-form flex-sb flex-w">
                         <span class="login100-form-title p-b-32">
-                            Quyết Tiến
+                           <img src="~/Image/Logo_QT.jpg " width="65" height="65"/>
+						   <span>QUYẾT TIẾN</span>
                         </span>
 
                         <span class="txt1 p-b-11">
