--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -16,45 +16,46 @@
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href="index">ADMIN QUYET TIEN</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-                    <a class="nav-link" href="/Admin/ProductAdmin">
-                        <span class="nav-link-text">Manage Product</span>
-                    </a>
-                </li>
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Quanlyhoadon">
-                    <a class="nav-link" href="/Admin/ProductAdmin">
-                        <span class="nav-link-text">Manage Bill</span>
-                    </a>
-                </li>
-            </ul>
-            <ul class="navbar-nav sidenav-toggler">
-                <li class="nav-item">
-                    <a class="nav-link text-center" id="sidenavToggler">
-                        <i class="fa fa-fw fa-angle-left"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-               
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <a class="navbar-brand" href="~/Admin/ProductAdmin"> ĐIỆN MÁY QUYẾT TIẾN </a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+          <a class="nav-link" href="/Admin/ProductAdmin">
+            <i class="fa fa-fw  fa-list"></i>
+            <span class="nav-link-text" >Manage Product</span>
+          </a>
+        </li>
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+          <a class="nav-link" href="~/Admin/CashBill">
+            <i class="fa fa-fw fa-address-card"></i>
+            <span class="nav-link-text">Manage Bill</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="navbar-nav sidenav-toggler">
+        <li class="nav-item">
+          <a class="nav-link text-center" id="sidenavToggler">
+            <i class="fa fa-fw fa-angle-left"></i>
+          </a>
+        </li>
+      </ul>
+	  <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     @if (Session["UserName"] != null)
                     {
-                        <p style="color:white;"><i class="fa fa-user-circle-o"></i>
-                        Welcome @Session["UserName"].ToString() | 
-                        <a class="nav-link" href="/Admin/ProductAdmin/Logout">Logout</a>
+                        <p style="color:white; font-size:160%;">
+                        Welcome @Session["UserName"].ToString()  |
                         </p>
                     }
                 </li>
-            </ul>
-        </div>
-    </nav>
+				<a class="nav-link" style="color:white; font-size:120%;" href="/Admin/ProductAdmin/Logout">Logout</a>
+      </ul>
+    </div>
+  </nav>
     <div class="content-wrapper">
         @RenderBody()
         <!-- /.container-fluid-->
