--- a/DIENMAYQUYETTIEN/Content/sb-admin.css
+++ b/DIENMAYQUYETTIEN/Content/sb-admin.css
@@ -259,8 +259,9 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
   color: #adb5bd; }
 
 @media (min-width: 992px) {
-  #mainNav.navbar-dark .navbar-collapse .navbar-sidenav {
-    background: #343a40; }
+    #mainNav.navbar-dark .navbar-collapse .navbar-sidenav {
+        background: #a9acb2;
+    }
     #mainNav.navbar-dark .navbar-collapse .navbar-sidenav li.active a {
       color: white !important;
       background-color: #495057; }
