--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Create.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Create.cshtml
@@ -79,7 +79,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary pull-right", @style = "margin-bottom: 10px" })
 </div>
 
 @section Scripts {
