--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBillDetail/Create.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBillDetail/Create.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-@using (Html.BeginForm("Create2", "CashBillDetail", FormMethod.Post, new { enctype = "multipart/form-data" })) 
+@using (Html.BeginForm("Create2", "CashBillDetail")) 
 {
     @Html.AntiForgeryToken()
     
