--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/InstallmentBill/Index.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/InstallmentBill/Index.cshtml
@@ -84,8 +84,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+                @Html.ActionLink("PrintBill", "PrintBill", new { id=item.ID }) |
             </td>
         </tr>
     }
