--- a/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Index.cshtml
+++ b/DIENMAYQUYETTIEN/Areas/Admin/Views/CashBill/Index.cshtml
@@ -51,7 +51,7 @@
 						@Html.DisplayFor(modelItem => item.Note)
 					</td>
 					<td>
-						@Html.DisplayFor(modelItem => item.GrandTotal)
+                        @String.Format("{0:0,0}", item.GrandTotal) VNĐ
 					</td>
 					<td>
 						@Html.ActionLink("Edit", "Edit", new { id=item.ID }, new {@class = "btn btn-warning" }) |
